--- a/package.json
+++ b/package.json
@@ -3,25 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@mdi/js": "^6.1.95",
+    "@mdi/react": "^1.5.0",
+    "bootstrap": "5.1.1",
+    "concurrently": "^6.2.1",
+    "dotenv": "^10.0.0",
+    "esm": "^3.2.25",
+    "express": "4.17.1",
+    "he": "^1.2.0",
+    "highlight.js": "^11.2.0",
+    "node-fetch": "^3.0.0",
+    "nodemon": "2.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "sass": "^1.42.0",
+    "url-join": "^4.0.1",
+    "yargs": "^17.1.1"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "react-scripts start",
+    "serve": "nodemon -w server --experimental-modules server/index.mjs",
+    "start": "concurrently --names \"backend,frontend\" \"yarn serve\" \"react-scripts start\"",
+    "production": "node server/index.js --prod",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
