--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "@mdi/react": "^1.5.0",
     "bootstrap": "5.1.1",
     "concurrently": "^6.2.1",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "4.17.1",
     "he": "^1.2.0",
     "highlight.js": "^11.2.0",
+    "memory-cache": "^0.2.0",
     "node-fetch": "^3.0.0",
     "nodemon": "2.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.0",
     "url-join": "^4.0.1",
