--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "4.17.1",
     "he": "^1.2.0",
     "highlight.js": "^11.2.0",
+    "js-cookie": "^3.0.1",
     "memory-cache": "^0.2.0",
     "node-fetch": "^3.0.0",
     "nodemon": "2.0.3",
