--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "herald",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "concurrently": "^6.2.1",
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
     "statuses": "^2.0.1"
   },
   "proxy": "http://localhost:5000",
