--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -3,28 +3,28 @@ name: Publish Docker image on git-push
 on: push
 
 jobs:
-  push_to_registry:
+  docker_build_edge:
     runs-on: ubuntu-20.04
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v3
         with:
-          images: my-docker-hub-namespace/my-docker-hub-repository
+          images: katacarbix/herald
           tags: type=edge
           flavor: latest=false
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v2
         with:
           context: .
           push: true
