--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "bootstrap": "5.1.1",
     "dayjs": "^1.10.7",
     "he": "^1.2.0",
-    "highlight.js": "^11.2.0",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.14.0",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
