--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "5.1.1",
     "dayjs": "^1.10.7",
     "he": "^1.2.0",
+    "highlight.js": "^11.2.0",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
