--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "concurrently": "^6.2.1",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "memory-cache": "^0.2.0",
     "node-fetch": "^3.0.0",
-    "nodemon": "2.0.3",
-    "rewire": "^5.0.0",
     "url-join": "^4.0.1",
     "yargs": "^17.1.1"
   },
@@ -17,12 +14,14 @@
     "@mdi/js": "^6.1.95",
     "@mdi/react": "^1.5.0",
     "bootstrap": "5.1.1",
+    "concurrently": "^6.2.1",
     "dayjs": "^1.10.7",
     "favicons": "^6.2.2",
     "favicons-webpack-plugin": "^4.2.0",
     "he": "^1.2.0",
     "highlight.js": "^11.2.0",
     "js-cookie": "^3.0.1",
+    "nodemon": "2.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
@@ -30,6 +29,7 @@
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "rewire": "^5.0.0",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "statuses": "^2.0.1"
@@ -39,7 +39,7 @@
     "serve": "nodemon -w server --experimental-modules --trace-warnings server/index.mjs",
     "start": "concurrently --names \"backend,frontend\" \"yarn serve\" \"react-scripts start\"",
     "production": "node --experimental-modules server/index.mjs --prod",
-    "build": "node ./build.js",
+    "build": "node scripts/build.js",
     "eject": "react-scripts eject"
   },
   "browserslist": {
