--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "herald",
   "version": "0.1.1",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "4.17.1",
