improved release workflow + version bump

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,14 @@
-/node_modules
-/build
-/releases
-release.sh
+build
+img
+!img/logo.svg
+node_modules
+release
+scripts
+!scripts/build.js
 *.md
-.DS_Store
 *.env
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log
+.gitattributes
+.github
+.gitignore
+.DS_Store
