--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "herald",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": true,
   "license": "MIT",
   "dependencies": {
@@ -41,7 +41,7 @@
     "start": "concurrently --names \"backend,frontend\" \"yarn serve\" \"react-scripts start\"",
     "production": "node --experimental-modules server/index.mjs --prod",
     "build": "node scripts/build.js",
-    "eject": "react-scripts eject"
+    "bundle-release": "bash scripts/release.sh"
   },
   "browserslist": {
     "production": [
