--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: katacarbix/herald
-          tags: type=edge,branch=main
+          tags: type=edge
           labels: |
             org.opencontainers.image.licenses=MIT
 
